# nova-desktop

./: .gitignore  README.md  package-lock.json  package.json  tauri-key-output.txt
.github/workflows/: build-windows.yml  release.yml
src/: index.html  index.html.bak
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embed.rs  gen.rs  main.rs  nn.rs
